--- a/css/style.css
+++ b/css/style.css
@@ -1,69 +1,87 @@
 body {
- 
   /*min-width: 400px;*/
   height: 100vh;
+  max-width: 600px;
   padding: 0;
   margin: 0 auto;
-  font-family: 'Proxima Nova', 'Arial Nova', 'Segoe UI', sans-serif, Helvetica, Arial;
+  font-family: 'Arial Nova', 'Helvetica', 'Roboto', sans-serif, Helvetica, Arial;
   font-weight: 400;
   transition: 300ms;
-  background: #202020;
-  color: #eee;
+  background: #171717;
+  color: #fff;
 }
 
 header {
-    margin-top: 40px;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+  top: 0px;
+  left: 0px;
+  position: fixed;
+  background-color: #111;
+  width: 100%;
+  height: 48px;
+  z-index: 999;
 }
 
-header > a {
-    color: #dd0c11;
-    text-decoration: none;
-    font-weight: bold;
-    height: 24px;
-    width: 80%;
-    display: flex; 
+header a {
+  color: #dd0c11;
+  text-decoration: none;
+  font-weight: bold;
+  text-align: center;
+  height: 48px;
+  width: 48px;
+}
+
+header a span {
+  display: block;
+  margin: auto;
+  padding: 12px;
+}
+
+header a.menu {
+  position: absolute;
+  right: 0px;
 }
 
 .col {
+  margin-top: 60px;
   align-items: center;
   text-align: center;
+  overflow-y: hidden;
 }
 
 img.scale-with-grid {
-  max-width: 100%;
+  width: 75%;
   height: auto;
 }
 
-.musesStyleReset,
-.musesStyleReset DIV,
-.musesStyleReset IMG,
-.musesStyleReset SPAN {
+div.listarea {
+  margin: 0 auto;
+}
+
+.musesStyleReset, .musesStyleReset DIV, .musesStyleReset IMG, .musesStyleReset SPAN {
   align-self: center;
   margin: 0 auto !important;
 }
 
 #title-wrapper {
   background: #111;
-  display: flex; 
-  align-items: center;
-  justify-content: center;
-  padding: 10px 20px;
-  height: 60px;
-  margin: 0;
+  height: 48px;
+  left: 0;
+  text-align: center;
   position: fixed;
   width: 100vw;
 }
 
-#head-logo
-{
-  height: 80px; 
+#head-logo {
+  display: inline-block;
+  height: 48px;
+  margin: 0px;
+  vertical-align: middle;
 }
 
-#title-wrapper h2{
+#title-wrapper h2 {
   padding: 0;
+  display: inline-block;
+  font-size: 1rem;
 }
 
 #img-container {
@@ -88,8 +106,24 @@ img.scale-with-grid {
 }
 
 .stations {
-  padding-top: 80px;
+  padding-top: 40px;
   margin: 0 auto;
+}
+
+.inset {
+  padding-top: 0;
+  padding-bottom: 5rem;
+}
+
+.inset header {
+  background-color: transparent;
+  position: fixed;
+  top: 0px;
+}
+
+.inset h2 {
+  text-align: center;
+  font-size: 1.2rem;
 }
 
 .other {
@@ -97,10 +131,9 @@ img.scale-with-grid {
   margin: 0 auto;
 }
 
-@media screen and (max-device-width: 480px) {
- .stations {
-   width: 100%;
- }
+.other h2 {
+  margin-top: 40px;
+  margin-bottom: 0px;
 }
 
 .list {
@@ -109,16 +142,15 @@ img.scale-with-grid {
   flex-basis: 33.33333%;
   padding: 0;
   margin: 0 auto;
-  margin-top: 20px;
   text-align: center;
   max-width: 600px !important;
 }
 
 .list li {
   line-height: 25px;
-  border-radius: 5px;   
+  border-radius: 5px;
   flex: 0 0 33.333333%;
-  display: inline-block; 
+  display: inline-block;
   margin: 5px auto;
 }
 
@@ -135,18 +167,21 @@ img.scale-with-grid {
   padding: 5px;
   display: inline-block;
   text-align: center;
-  color: white;  
+  color: white;
   text-decoration: none;
   background: none;
 }
 
 .list li a p {
- padding: 0;
- margin: 0;
+  padding: 0;
+  margin: 0;
+  font-size: 0.75rem;
+  line-height: 1.2rem;
 }
 
 .st-icon {
-  width: 50%;
+  width: 75%;
+  max-width: 200px;
 }
 
 .st-social {
@@ -159,7 +194,7 @@ img.scale-with-grid {
   width: 100%;
 }
 
-.sticky + .stations {
+.sticky+.stations {
   padding-top: 102px;
   margin: 0 auto;
 }
@@ -198,5 +233,70 @@ img.scale-with-grid {
   }
   100% {
     background-position: 0% 50%;
+  }
+}
+
+div#mobile-nav {
+  background-color: rgba(17, 17, 17, 0.95);
+  z-index: 9999;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  transform: translate3d(100vw, 0, 0);
+  transition: transform .3s cubic-bezier(0, .52, 0, 1);
+  overflow: scroll;
+}
+
+div#mobile-nav.show {
+  transform: translate3d(0vw, 0, 0);
+}
+
+/* Desktop */
+
+@media only screen and (min-width: 768px) {
+  body {
+    max-width: 720px;
+  }
+  div#title-wrapper {
+    position: fixed;
+    top: 0;
+  }
+  div.stations {
+    position: relative;
+  }
+  ul.list {
+    margin-top: 20px;
+  }
+  header {
+    position: inherit;
+    display: block;
+    width: 720px;
+    margin: 0 auto !important;
+  }
+  header a.menu {
+    position: inherit;
+    margin-left: 619px;
+  }
+  div.col {
+    margin-top: 0px;
+  }
+  div#mobile-nav header {
+    position: inherit;
+    display: block;
+    width: 720px;
+  }
+  div#mobile-nav header a.menu {
+    position: absolute;
+  }
+  img.st-icon {
+    max-width: 150px;
+  }
+  div.inset h2 {
+    margin-top: -30px;
+  }
+  div.listarea {
+    margin-top: -20px;
   }
 }
