--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,19 @@
 body {
   /*min-width: 400px;*/
-  height: 100vh;
   max-width: 600px;
   padding: 0;
   margin: 0 auto;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+  font-family: "Hind Siliguri", sans-serif;
   transition: 300ms;
-  background: #171717;
+  background: rgb(45, 45, 48);
+  background: linear-gradient(
+    36deg,
+    rgba(45, 45, 48, 1) 0%,
+    rgba(26, 26, 37, 1) 35%,
+    rgba(37, 37, 37, 1) 100%
+  );
+  background-repeat: no-repeat;
+  background-size: contain;
   color: #fff;
   overflow: auto;
   overflow-x: hidden;
@@ -16,9 +23,7 @@ header {
   top: 0px;
   left: 0px;
   position: fixed;
-  background-color: #111;
   width: 100%;
-  height: 48px;
   z-index: 999;
 }
 
@@ -59,7 +64,7 @@ div#mobile-nav {
   top: 0;
   left: 0;
   transform: translate3d(100vw, 0, 0);
-  transition: transform .3s cubic-bezier(0, .52, 0, 1);
+  transition: transform 0.3s cubic-bezier(0, 0.52, 0, 1);
   overflow: auto;
 }
 
@@ -111,14 +116,16 @@ div.listarea {
   margin-top: -20px;
 }
 
-.musesStyleReset, .musesStyleReset DIV, .musesStyleReset IMG, .musesStyleReset SPAN {
+.musesStyleReset,
+.musesStyleReset DIV,
+.musesStyleReset IMG,
+.musesStyleReset SPAN {
   align-self: center;
   margin: 0 auto !important;
 }
 
 #title-wrapper {
-  background: #111;
-  height: 48px;
+  background-color: #131313;
   left: 0;
   text-align: center;
   position: fixed;
@@ -127,15 +134,15 @@ div.listarea {
 
 #head-logo {
   display: inline-block;
-  height: 48px;
+  height: 60px;
   margin: 0px;
   vertical-align: middle;
 }
 
 #title-wrapper h2 {
   padding: 0;
+  margin: 0;
   display: inline-block;
-  font-size: 1rem;
 }
 
 #img-container {
@@ -248,7 +255,7 @@ div.listarea {
   width: 100%;
 }
 
-.sticky+.stations {
+.sticky + .stations {
   padding-top: 102px;
   margin: 0 auto;
 }
@@ -291,15 +298,15 @@ div.listarea {
 }
 
 div#footer {
-  font-size: 10px;
-  line-height: 14px;
+  font-size: 0.8rem;
+  line-height: 0.6rem;
   text-align: center;
   margin-top: 80px;
   margin-left: 20px;
   margin-right: 20px;
   margin-bottom: 100px;
   padding-bottom: 50px;
-  color: #b2b2b2;
+  color: #e2e2e2;
 }
 
 div#footer a {
