--- a/css/style-dl.css
+++ b/css/style-dl.css
@@ -1,14 +1,12 @@
 * {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif, Helvetica,
-    sans-serif;
+  font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
   text-align: center;
 }
 
 body {
-  background: rgba(37, 37, 37, 1) 100%;
+  background: rgba(11, 11, 16, 1) 100%;
   color: #fff;
 }
 
@@ -44,8 +42,16 @@ body.main-body {
   vertical-align: middle;
 }
 
+img.applogo {
+  display: block;
+  height: 80px;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
 img.appimage {
-  margin-top: 100px;
+  display: inline-block;
+  margin-top: 40px;
   width: 60%;
   max-width: 480px;
   transition: all 0.3s ease-in-out;
