--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@ body {
   max-width: 600px;
   padding: 0;
   margin: 0 auto;
-  font-family: "Hind Siliguri", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   transition: 300ms;
   background: rgb(45, 45, 48);
   background: linear-gradient(
@@ -142,7 +143,6 @@ div.listarea {
 #title-wrapper h2 {
   padding: 0;
   margin: 0;
-  display: inline-block;
 }
 
 #img-container {
@@ -167,7 +167,7 @@ div.listarea {
 }
 
 .stations {
-  padding-top: 40px;
+  padding-top: 80px;
   margin: 0 auto;
 }
 
@@ -209,8 +209,9 @@ div.listarea {
 
 .list li {
   line-height: 25px;
+  background: #131313;
   border-radius: 5px;
-  flex: 0 0 33.333333%;
+  flex: 0 0 30%;
   display: inline-block;
   margin: 5px auto;
 }
@@ -317,8 +318,8 @@ div#footer a {
 div.message {
   display: block;
 }
-/* Desktop */
 
+/* Desktop */
 @media only screen and (min-width: 720px) {
   body {
     max-width: 720px;
@@ -332,6 +333,9 @@ div.message {
   }
   ul.list {
     margin-top: 20px;
+  }
+  li {
+    margin: 5px;
   }
   header {
     position: inherit;
